feat: 支持自定义布局 tab

--- a/demos/customBigClassLayout/src/index.less
+++ b/demos/customBigClassLayout/src/index.less
@@ -5,6 +5,22 @@
   .portrait-im-component{
     background-color: transparent!important;
   }
+  .tabs{
+    display: flex;
+    justify-content: space-around;
+    padding: 10px 20px;
+    .tab{
+      color: #fff;
+      padding: 0 20px;
+      &.active{
+        border-bottom: 2px solid #006eff;
+      }
+    }
+  }
+  .live-info{
+    color: #fff;
+    padding: 10px 20px;
+  }
   .class-header{
     height: calc(100vw * 9 / 16);
     .board-area{
